welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:29: error: not found: value YELLOW
		faireV(YELLOW)
                       ^