welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
def faireV(c:Color)
{
setCouleurBrosse(c)
avance()
baisseBrosse()
leveBrosse()
avance()
gauche()
avance()
baisseBrosse()
leveBrosse()
recule()
droite()
avance()
baisseBrosse()
leveBrosse()
avance()
gauche()
}

for(i <- 1 to 3)
{
for(i <- 1 to 3)
{
	for(i <- 1 to 4 )
	{
		faireV(YELLOW)
	}
	avance(5)
}
gauche()
avance(5)
droite()
}
}